--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_gkdownloadmanager.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_gkdownloadmanager.scss
@@ -670,6 +670,10 @@
 
 		.description {
 			color: var(--gkdownload-item-description-color-normal);
+
+			> .size {
+				flex-shrink: 0;
+			}
 		}
 	}
 }
